# openalex-py-mitas

./: impl-steps.md  pyproject.toml
data/: antibiotics-for-sore-throat.json
src/application/services/: __init__.py  matching_service.py
src/domain/enums/: __init__.py  search_status.py  search_strategy_type.py  study_type.py
src/domain/interfaces/: __init__.py  publication_repository.py  search_strategy.py
src/domain/models/: __init__.py  config.py  reference.py  search_result.py  study.py
src/domain/strategies/: __init__.py  base_strategy.py  identifier_strategy.py  title_authors_strategy.py  title_authors_year_strategy.py  title_only_strategy.py  title_year_strategy.py
src/infrastructure/repositories/: __init__.py  openalex_repository.py
src/utils/: __init__.py  dict_helpers.py  dict_helpers.py,cover  report_formatter.py  text_normalizer.py
tests/: __init__.py
tests/integration/repositories/: __init__.py  test_openalex_repository.py
tests/unit/: __init__.py
tests/unit/application/: __init__.py
tests/unit/application/services/: __init__.py  test_matching_service.py
tests/unit/domain/: __init__.py  test_config.py  test_reference.py  test_search_result.py  test_study.py
tests/unit/domain/interfaces/: test_publication_repository.py  test_search_strategy.py
tests/unit/domain/strategies/: mock_repository.py  test_base_strategy.py  test_doi_strategy.py  test_pmid_strategy.py  test_title_authors_strategy.py  test_title_authors_year_strategy.py  test_title_journal_strategy.py  test_title_only_strategy.py  test_title_year_strategy.py
tests/unit/infrastructure/repositories/: test_openalex_repository.py
tests/unit/utils/: test_dict_helpers.py  test_report_formatter.py  test_text_normalizer.py
